# minecommit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README-CN.md  README.md  backup.sh  components.json  package.json  test-checkout.sh  test-commit.sh
docs/: FAQ.md
minecommit/: Cargo.toml
minecommit-cli/: Cargo.toml  main.rs
minecommit-gui/: components.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
minecommit-gui/src/: App.tsx  index.css  main.tsx
minecommit-gui/src-tauri/: Cargo.toml  tauri.conf.json
minecommit-gui/src-tauri/icons/: icon.icns
minecommit-gui/src-tauri/src/: lib.rs  main.rs
minecommit-gui/src/components/: app-sidebar.tsx  commit-graph.tsx  log-viewer.tsx  rolling-log.tsx
minecommit-gui/src/components/ui/: button.tsx  dropdown-menu.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
minecommit-gui/src/pages/: DashboardPage.tsx  HomePage.tsx  SaveManagePage.tsx  SettingsPage.tsx  home.tsx  save-manage.tsx
minecommit/src/: lib.rs
minecommit/src/handler/: chunk_region.rs  entities_region.rs  gzip_nbt.rs  mod.rs  poi_region.rs  raw.rs
minecommit/src/handler/chunk_region/: mapping.rs  mod.rs  nbt.rs  palette.rs
minecommit/src/odb/: fs.rs  git.rs  mod.rs
minecommit/src/utils/: cmd.rs  mod.rs  nbt.rs  palette.rs  region.rs
src/: index.css  main.tsx
src/components/: activity-graph.tsx  app-sidebar.tsx  commit-graph.tsx  rolling-log.tsx
src/components/unlumen-ui/: dock.tsx
src/pages/: DashboardPage.tsx  HistoryPage.tsx  HomePage.tsx
