[package]
name = "minecommit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
versions.workspace = true

flate2 = "1.1.9"
glob = "0.3.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
bytes = { version = "1.11.1", features = ["serde"] }
gix = "0.81.0"
simdnbt = "0.10.0"
bytemuck = { version = "1.25.0", features = ["extern_crate_alloc"] }

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2" }
